--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="container">
+      <div class="title">
+        <h1 style="text-align: center">Let's play Rock, Paper, Scissors!</h1>
+      </div>
+      <div class="options">
+        <button class="btn" id="rock">Rock</button>
+        <button class="btn" id="paper">Paper</button>
+        <button class="btn" id="scissors">Scissors</button>
+      </div>
+      <div class="score">
+        <h2>Score</h2>
+        <p>Player: <span id="player-score"></span></p>
+        <p>Computer: <span id="computer-score"></span></p>
+        <p>Draw: <span id="draw-score"></span></p>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
