--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="options">
         <button class="btn" id="rock">Rock</button>
         <button class="btn" id="paper">Paper</button>
-        <button class="btn" id="scissors">Scissors</button>
+        <button class="btn" id="scissor">Scissor</button>
       </div>
       <div class="score">
         <h2>Score</h2>
